# kairo

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
docs/superpowers/plans/: 2026-07-07-kairo-architectural-deepening.md  2026-07-07-kairo-test-coverage.md
kairo-agents/: Cargo.toml
kairo-agents/src/: lib.rs  react_loop.rs  thought_parser.rs  tool_dispatcher.rs
kairo-api/: Cargo.toml
kairo-api/src/: lib.rs
kairo-cli/: Cargo.toml
kairo-cli/examples/: orchestrator_demo.rs
kairo-cli/src/: lib.rs  main.rs
kairo-connectors/: Cargo.toml
kairo-connectors/src/: lib.rs
kairo-core/: Cargo.toml
kairo-core/src/: agent.rs  config.rs  context.rs  error.rs  lib.rs  model.rs  model_id.rs  provider_error.rs  task.rs  traits.rs  types.rs  workflow.rs
kairo-council/: Cargo.toml
kairo-council/src/: lib.rs
kairo-edge/: Cargo.toml
kairo-edge/src/: lib.rs
kairo-embeddings/: Cargo.toml
kairo-embeddings/src/: lib.rs
kairo-macros/: Cargo.toml
kairo-macros/src/: lib.rs
kairo-memory/: Cargo.toml
kairo-memory/src/: lib.rs
kairo-orchestrator/: Cargo.toml
kairo-orchestrator/src/: dag.rs  executor.rs  lib.rs  runner.rs  store.rs
kairo-providers/: Cargo.toml
kairo-providers/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  registry.rs
kairo-sandbox/: Cargo.toml
kairo-sandbox/src/: lib.rs
kairo-telemetry/: Cargo.toml
kairo-telemetry/src/: interface.rs  lib.rs
kairo-tests/: Cargo.toml
kairo-tests/src/: lib.rs
kairo-tools/: Cargo.toml
kairo-tools/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: lib.rs
