[package]
name = "kairo-edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kairo-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dev-dependencies]
tokio-test = { workspace = true }
