[package]
name = "kairo-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kairo-core = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

wasmtime = { version = "25.0", features = ["cranelift", "runtime", "std", "component-model"] }
wasmtime-wasi = "25.0"
blake3 = "1.5"
